[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetches PubMed research papers and filters non-academic authors."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0",
    "lxml>=4.9.3",
    "typer>=0.9.0"
]

[project.scripts]
get-papers-list = "pubmed_fetcher.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

